--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "serve": "vitepress serve"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "^18.7.16",
+    "@vueuse/core": "^9.2.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "unocss": "^0.45.18",
     "unplugin-vue-components": "^0.22.4",
-    "vitepress": "^1.0.0-alpha",
+    "vitepress": "1.0.0-alpha.13",
     "vue": "^3.2.33"
   }
 }
