--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "engines": {
-    "node": ">=14.0.0"
-  },
+  "name": "headlessui-float-docs",
+  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vitepress",
     "build": "vitepress build",
     "serve": "vitepress serve"
   },
   "devDependencies": {
-    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "^18.7.16",
-    "@vueuse/core": "^9.2.0",
-    "body-scroll-lock": "^4.0.0-beta.0",
-    "unocss": "^0.53.1",
-    "unplugin-vue-components": "^0.25.1",
-    "vitepress": "1.0.0-alpha.50",
-    "vue": "^3.2.47"
+    "@vueuse/core": "^11.0.0",
+    "unocss": "^0.62.0",
+    "unplugin-vue-components": "^0.27.0",
+    "vitepress": "1.3.4",
+    "vue": "^3.4.0"
   }
 }
