--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,6 @@
 {
-  "compilerOptions": {
-    "outDir": "dist",
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "allowJs": true,
-    "strict": true,
-    "jsx": "preserve",
-    "baseUrl": "."
-  },
-  "include": ["env.d.ts", "src/**/*", ".vitepress/**/*"]
+  "include": [
+    ".vitepress/**/*",
+    "src/**/*.md"
+  ]
 }
